[tool.poetry]
name = "docs-blue-nebula-org"
description = "Blue Nebula documentation"
authors = [
    "TheAssassin <theassassin@assassinate-you.net>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = ">=7"
sphinx-autobuild = "^2024.10.3"
sphinx-git = "^11.0.0"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-plantuml = "^0.30"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
